test/programs/good/typechecker/new_4.lq
initBit :: !(() -> Bit)
initBit _ = measr (new @1)

