test/programs/bad/typechecker/new_5.lq
initBit :: !(() -> Qbit)
initBit _ = new

